# council-of-clis

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  default_clis.toml  dsu.py  modes.py  peer_log.py  pyproject.toml  registry.py  server.py  spawn.py  trust.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
docs/: cli-installation.md  modes-deep-dive.md  v0.5-peer-awareness-prd.md
examples/: first-prompt.md
examples/status-templates/: general-coding.md  research-task.md
prompts/: status.example.md
scripts/: bootstrap.ps1  folder_picker_helper.py
static/: app.js  index.html  style.css
static/components/: cli-card.js  cli-pane.js  options-popover.js  run-status-bar.js
tests/: conftest.py  fake_cli.py  test_conv_id_validation.py  test_conversation_session_lock.py  test_dsu.py  test_dsu_e2e.py  test_e2e_modes.py  test_folder_picker.py  test_modes.py  test_peer_log.py  test_registry.py  test_registry_options.py  test_session_capture.py  test_spawn_options.py  test_trust.py
