[project]
name = "council-of-clis"
version = "0.1.0"
description = "Multi-CLI orchestrator: route one prompt to codex, claude, copilot, gemini and watch them debate, cascade, or vote in your browser."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Muhammet Sıddık Bel" }]
keywords = [
    "cli", "llm", "multi-agent", "orchestration",
    "mixture-of-agents", "consensus", "anthropic", "openai", "codex",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.4,<1",
    "httpx>=0.27,<1",     # for TestClient
]

[project.urls]
Homepage = "https://github.com/msbel5/council-of-clis"
Issues = "https://github.com/msbel5/council-of-clis/issues"

[project.scripts]
council = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py", "modes.py", "static/**", "prompts/status.example.md"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RET"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-q --tb=short"
